--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,140 @@
 .App {
+  position: relative;
   text-align: center;
+  width: 1440px;
+  height:1024px;
+  margin: auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1{
+  font-family: cursive;
+  font-weight: bolder;
+  color: #bd4d6e;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* SampleTextSection */
+#sampleTextSection {
+  position: absolute;
+  width: 696px;
+  height: 348px;
+  left: 372px;
+  top: 129px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: lighter;
+  text-align: justify;
+  line-height: 24px;
+  background-color: white;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+#sampleTextBox {
+  position: absolute;
+  width: 636px;
+  height: 251px;
+  left: 30px;
+  top: 72px;
+}
+
+/* InputTextSection */
+#inputSection {
+  position: absolute;
+  width: 696px;
+  height: 318px;
+  left: 372px;
+  top: 488px;
+  background-color: white;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+textarea {
+  position: absolute;
+  width: 636px;
+  height: 278px;
+  left: 31px;
+  top: 21px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 16px;
+  font-weight: lighter;
+  text-align: justify;
+  line-height: 24px;
+  border: none;
+}
+/* DashboardSection */
+#dashboard {
+  position: absolute;
+  width: 248px;
+  height: 677px;
+  left: 1094px;
+  top: 129px;
+  background: #fdd3e0;
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+}
+.btn {
+  width: 196px;
+  height: 38px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: medium;
+  cursor: pointer;
+  border: none;
+  border-radius: 20em;
+  background: #bd4d6e;
+  border: 2px solid black;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+#generateTextBtn {
+  position: absolute;
+  left: 250px;
+  top: 12px;
+}
+#startBtn {
+  position: absolute;
+  left: 27px;
+  top: 36px;
+}
+#resetBtn {
+  position: absolute;
+  left: 27px;
+  top: 129px;
+}
+.timer {
+  width: 196px;
+  height: 86px;
+  background: white;
+  border: 1px solid black;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: large;
+  font-weight: bold;
+  line-height: 12px;
+}
+#counttimerdiv {
+  position: absolute;
+  left: 27px;
+  top: 223px;
+}
+#wordcountdiv {
+  position: absolute;
+  left: 24px;
+  top: 362px;
+}
+#typingspeeddiv {
+  position: absolute;
+  left: 26px;
+  top: 491px;
+  height: 140px;
+}
+#notes {
+  position: absolute;
+  padding: 0 12px;
+  width: 253px;
+  height: auto;
+  left: 70px;
+  top: 262px;
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+  background-color: #fdd3e0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media screen and (max-width: 1400px) {
+  .App {
+    margin-top: 0;
+    transform: scaleX(0.95);
   }
 }
